[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Menu Button white.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/BRADHITC.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Main menu.gd" type="Script" id=4]
[ext_resource path="res://Graphics/1'.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Main menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 1.0
margin_right = 1367.0
margin_bottom = 768.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1368, 768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title Container" type="CenterContainer" parent="Main Container"]
margin_right = 1368.0
margin_bottom = 384.0
rect_min_size = Vector2( 0, 384 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main Container/Title Container"]
margin_left = 532.0
margin_top = 146.0
margin_right = 836.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Terracotta"
align = 1

[node name="Button Container" type="VBoxContainer" parent="Main Container"]
margin_top = 388.0
margin_right = 1368.0
margin_bottom = 772.0
rect_min_size = Vector2( 0, 384 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" parent="Main Container/Button Container" instance=ExtResource( 2 )]
visible = false
margin_top = 116.0
margin_bottom = 164.0
focus_neighbour_bottom = NodePath("../New")
text = "Continue"
margin_from_center = 90

[node name="New" parent="Main Container/Button Container" instance=ExtResource( 1 )]
margin_top = 116.0
margin_bottom = 164.0
focus_neighbour_bottom = NodePath("../Controls")
text = "Play"
margin_from_center = 70

[node name="Controls" parent="Main Container/Button Container" instance=ExtResource( 1 )]
margin_top = 168.0
margin_bottom = 216.0
focus_neighbour_top = NodePath("../New")
focus_neighbour_bottom = NodePath("../Exit")
text = "Controls"

[node name="Exit" parent="Main Container/Button Container" instance=ExtResource( 1 )]
margin_top = 220.0
margin_bottom = 268.0
focus_neighbour_top = NodePath("../Controls")
text = "Exit"
margin_from_center = 60

[node name="Control overlay" type="ColorRect" parent="."]
visible = false
margin_right = 1368.0
margin_bottom = 768.0
rect_min_size = Vector2( 1368, 768 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control overlay"]
margin_left = 64.0
margin_top = 64.0
margin_right = 742.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 2 )
text = "Up arrow = jump
Left arrow = move left
Right arrow = move right
Down arrow = interact
I (Huruf I bukan l) = inventory
Esc = pause

di menu pake arrow key dan enter untuk navigasi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" parent="Control overlay" instance=ExtResource( 1 )]
margin_top = 544.0
margin_bottom = 592.0
text = "Close"
margin_from_center = 70

[connection signal="button_up" from="Main Container/Button Container/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="Main Container/Button Container/New" to="." method="_on_New_button_up"]
[connection signal="button_up" from="Main Container/Button Container/Controls" to="." method="_on_Controls_button_up"]
[connection signal="button_up" from="Main Container/Button Container/Exit" to="." method="_on_Exit_button_up"]
[connection signal="button_up" from="Control overlay/Close" to="." method="_on_Close_button_up"]
